# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile  Makefile.toml  docker-compose.yml
.sqlx/: query-314a780d5c9a5764cf92ef1f06ea85076cdfddef3a5aa3b0600a541427237708.json  query-3abaea4bf4bc80f16a9c54e9ce5416c0904bee6f11d38fc688792201eaf5ea07.json  query-59848b28e17ee1b569fa26a30d6909b08dd81d32851a115f23e8208a6ab4b1b4.json  query-886b21501b3683d9082f45e77e13d49545f9f30456072aeaabbaa3bc17bce92b.json  query-99122ce1eb3d1601fdedd84259beb9b6ac3dab1cde5fa8a139f2c4d60ea49a84.json  query-9da272eb82367e77205090d42a0fb8624a30656f45f6da5a931e81706eaff389.json  query-d584cf06115617157a43fcfc385e7be5440fbf5aeaef13809e055561e48cea9b.json  query-e671ccd05d707030f865ebf9406ac330a48b38b1f9d18046a3a3da069a8a36c5.json  query-e70221fd2bc88f7c24430e7faa7874652c41cb9d11d549f4f023fb59f37ad4a7.json
adapter/: Cargo.toml
adapter/migrations/: 20241014062547_start.down.sql  20241014062547_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  user.rs
api/src/model/: book.rs  user.rs
api/src/route/: book.rs  health.rs  user.rs  v1.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: mod.rs
kernel/src/model/auth/: event.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  book.rs  health.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  lib.rs
src/: main.rs
