[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel = {workspace = true}
shared = {workspace = true}
registry = {workspace = true}
adapter = {workspace = true}
axum = {workspace = true}
uuid = {workspace = true}
derive-new = {workspace = true}
serde = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
utopia = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
tower = {workspace = true}
strum = {workspace = true}
chrono = {workspace = true}
axum-extra = {workspace = true}
tokio-stream = {workspace = true}
garde = {workspace = true}

[dev-dependencies]
mockall = {workspace = true}
hyper = "1.5.0"
rstest = "0.23.0"
serde_json = "1.0.128"
