[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = {workspace = true}
async-trait = {workspace = true}
anyhow = {workspace = true}
uuid = {workspace = true}
derive-new = {workspace = true}
chrono = {workspace = true}
mockall = {workspace = true}
serde = {workspace = true}
strum = {workspace = true}
sqlx = {workspace = true}

[dev-dependencies]
anyhow = {workspace = true}
